--- a/_posts/2023-08-16-mysql.md
+++ b/_posts/2023-08-16-mysql.md
@@ -11,3 +11,5 @@ References:
 * `CREATE DATABASE airbyte`
 * `GRANT PRIVILEGE ON airbyte.* TO 'airbyte'@'host';`
 * `FLUSH PRIVILEGES;`
+
+There is one more setting I don't remember. Look for Airbyte errors, when connecting to mysql, and set the setting globally.
