--- a/_posts/2023-09-10-sheep-rl.md
+++ b/_posts/2023-09-10-sheep-rl.md
@@ -8,4 +8,6 @@ categories:
 * Requires python 3.10
 * `sudo dnf install python3.10`
 * `git clone https://github.com/Eclectic-Sheep/sheeprl.git`
-* ...
+* `python3.10 -m venv ~/.venv/sheeprl`
+* `cd sheeprl`
+* `pip install .`
