--- a/_posts/2023-09-10-sheep-rl.md
+++ b/_posts/2023-09-10-sheep-rl.md
@@ -6,7 +6,7 @@ categories:
 
 * [repo](https://github.com/Eclectic-Sheep/sheeprl)
 * Requires python 3.10
-* `sudo dnf install python3.10`
+* `sudo dnf install python3.10 python3.10-devel`
 * `git clone https://github.com/Eclectic-Sheep/sheeprl.git`
 * `python3.10 -m venv ~/.venv/sheeprl`
 * `cd sheeprl`
