--- a/_posts/2023-09-10-sheep-rl.md
+++ b/_posts/2023-09-10-sheep-rl.md
@@ -11,3 +11,6 @@ categories:
 * `python3.10 -m venv ~/.venv/sheeprl`
 * `cd sheeprl`
 * `pip install .`
+* `pip install opencv-python`
+* `python sheeprl.py ppo exp=ppo env=gym env.id=CartPole-v1`
+* TO DO: continue
