--- a/_posts/2023-09-10-sheep-rl.md
+++ b/_posts/2023-09-10-sheep-rl.md
@@ -4,6 +4,10 @@ layout: post
 categories: 
 ---
 
+Talk:
+* [ChatGPT and Minecraft's diamonds playing agents: Reinforcement Learning in a nutshell with sheeprl](https://2023.pycon.it/en/event/chatgpt-and-minecrafts-diamonds-playing-agents-reinforcement-learning-in-a-nutshell-with-sheeprl)
+
+Install steps:
 * [repo](https://github.com/Eclectic-Sheep/sheeprl)
 * Requires python 3.10
 * `sudo dnf install python3.10 python3.10-devel`
@@ -13,4 +17,4 @@ categories:
 * `pip install .`
 * `pip install opencv-python`
 * `python sheeprl.py ppo exp=ppo env=gym env.id=CartPole-v1`
-* TO DO: continue
+* `pip install .[atari]`
