--- a/_posts/2023-09-10-sheep-rl.md
+++ b/_posts/2023-09-10-sheep-rl.md
@@ -4,6 +4,8 @@ layout: post
 categories: 
 ---
 
+Company: [Orobix](https://orobix.com/en/pycon-it-2023-wow/)
+
 Talk:
 * [ChatGPT and Minecraft's diamonds playing agents: Reinforcement Learning in a nutshell with sheeprl](https://2023.pycon.it/en/event/chatgpt-and-minecrafts-diamonds-playing-agents-reinforcement-learning-in-a-nutshell-with-sheeprl)
 
