--- a/_posts/2023-10-15-anca-stan.md
+++ b/_posts/2023-10-15-anca-stan.md
@@ -63,4 +63,31 @@ Cu care ocazie, am întâlnit alți prieteni, și o altă lume.
 
 *
 
+Am vizitat-o pe Doamna Stan, în curtea de pe Strada Spătar Milescu, în fiecare an în care mă întorceam în țară. De fiecare dată, neschimbată, interesată de prietenii ei, de foștii săi elevi, și de ultimele evenimente culturale.
+
+Cu toate că era o profesoară formidabilă, care lucra interactiv în clasă, și explica cu o claritate nemaiîntâlnită - algebra lineară cu demonstrații, analiza matematică cu demonstrații, formalismul epsilon-delta care e acum prea complicat pentru licee în Statele Unite, și nu se predă decât la specializare de matematică la mari universități - ei bine, nu cred că am vorbit o singură dată de matematică la ea în curte.
+
+O interesau atâtea alte subiecte.
+
+Într-un an, mi-a făcut cadou un jurnal al unchiului său, Ion Grosu, militar și ofițer de informații care luptase în ambele războaie mondiale. Anca Stan îngrijise manuscrisul, îl culesese și prefațase. Era o carte de înteres istoric, mărturia unui participant la mari evenimente, cât și o poveste personală de familie.
+
+Lucrase mai mulți ani la publicarea acestei cărți.
+
+Mai apoi, într-o altă vizită, m-a dus să-mi arate niște muzee din București de care era îndrăgostită. Am fost împreună la Muzeul de Artă Veche Apuseană „Ing. Dumitru Minovici”, un giuvaer de muzeu pe care altfel nu l-aș fi vizitat. Apoi, la muzeul Zambaccian. Și la Muzeul Cotroceni, pe care din nou, fără ea, l-aș fi ignorat.
+
+Ani mai târziu, am căpătat obiceiul să vizitez unul câte unul toate muzeele de artă din București, când mă aflu în vizită. Cred că, în sfârșit, s-ar putea să fi ajuns să le fi vizitat pe aproape toate.
+
+În 2021, mi-a arătat o nouă carte, la care ținea foarte mult. Era corespondența între Veronica Micle și Mihai Eminescu.
+
+Am citit împreună rânduri scrise de cei doi mari îndrăgostiți unul altuiaȘ
+
+"Mițicule, Mițule, Miluță te sărut și te sărut și te pup și te îmbrățișez și te doresc și iar te doresc și iar te sărut și acum te sărut de mii de ori.
+
+Veronica care nu poate fi supărată multă vreme pe răutăciosul ei Eminescu"
+
+Iar Eminescu scrie:
+
+"Îngerul meu blond, 
+
+Te-aș acoperi toată cu săruturi, cum argintarii îmbracă cu pietre scumpe icoana Maicii Domnului, dacă ai fi de față; aș face-o în gând dacă n-aș fi atât de gelosprecum sunt"
 
