--- a/_posts/2023-10-15-anca-stan.md
+++ b/_posts/2023-10-15-anca-stan.md
@@ -73,9 +73,9 @@ O interesau atâtea alte subiecte.
 
 Lucrase mai mulți ani la publicarea acestei cărți.
 
-Mai apoi, într-o altă vizită, m-a dus să-mi arate niște muzee din București de care era îndrăgostită. Am fost împreună la Muzeul de Artă Veche Apuseană „Ing. Dumitru Minovici”, un giuvaer de muzeu pe care altfel nu l-aș fi vizitat. Apoi, la muzeul Zambaccian. Și la Muzeul Cotroceni, pe care din nou, fără ea, l-aș fi ignorat.
+Mai apoi, într-o altă vizită, m-a dus să-mi arate muzee din București de care era îndrăgostită. Am fost împreună la Muzeul de Artă Veche Apuseană „Ing. Dumitru Minovici”, un giuvaer pe care altfel nu l-aș fi știut. Apoi, la muzeul Zambaccian. Și la Muzeul Cotroceni, pe care din nou, fără ea, l-aș fi ignorat.
 
-Ani mai târziu, am căpătat obiceiul să vizitez unul câte unul toate muzeele de artă din București, când mă aflu în vizită. Cred că, în sfârșit, s-ar putea să fi ajuns să le fi vizitat pe aproape toate.
+Am căpătat obiceiul să vizitez unul câte unul toate muzeele de artă din București, când mă aflu în vizită. Cred că, în sfârșit, s-ar putea să fi ajuns să le fi vizitat pe aproape toate.
 
 În 2021, mi-a arătat o nouă carte, la care ținea foarte mult. Era corespondența între Veronica Micle și Mihai Eminescu.
 
@@ -91,3 +91,14 @@ Iar Eminescu scrie:
 
 Te-aș acoperi toată cu săruturi, cum argintarii îmbracă cu pietre scumpe icoana Maicii Domnului, dacă ai fi de față; aș face-o în gând dacă n-aș fi atât de gelosprecum sunt"
 
+La ultima mea vizită în 2022, băiatul ei, Radu, care este cu doi ani mai mare ca mine, mi-a sugerat un traseu de vizitat prin Dâmbovița și Argeș, pe la Palatul Potlogi, și la Muzeul Etnografic de la Goleşti-Argeș. A fost o revelație.
+
+Doamna Stan avea o pasiune pentru viața veche a țării - povești pierdute după multe rănduri de noi generații. Pornise un proiect prin care să descrie istoria Bucureștiului, al Căii Victoriei, precum și a conacelor și mânăstirilor din Țara Românească.
+
+Mi-a arătat hărțile și materialele ei manuscrise, și un citat, care explica în ce mod Doamna Stan gândise acest proiect:
+
+"...Ceea ce este numai al unui oraș și nu al oricărui altuia, înfățișsarea și viața lui dau sufletului nostru o formă interioară specificăși se constituie în LUME a lui
+
+Dar pentru ca un oraș să devină lume a ta și tipar pentru relația ta cu largul lumii este nevoie să fi trăit în el îndelung... să-i cunoști fiecare ungher și să știi cât mai bine întregul trecut... Și mai este nevoie să fi fost din când în când plecat de acasă. Să înțelegi ceva din viața și sufletul Atenei și al Romei, al Parisului și al Londrei. Și apoi să vii înapoi și să intri la loc în pătimirile propriei tale lumi care, ca lume, este la fel de mare ca oricare alta. 
+
+- Petru Creția, Bucureștiul ca lume, Revista Arhitectura, 1990"
