--- a/_posts/2023-10-15-anca-stan.md
+++ b/_posts/2023-10-15-anca-stan.md
@@ -63,7 +63,7 @@ Cu care ocazie, am întâlnit alți prieteni, și o altă lume.
 
 *
 
-Am vizitat-o pe Doamna Stan, în curtea de pe Strada Spătar Milescu, în fiecare an în care mă întorceam în țară. De fiecare dată, neschimbată, interesată de prietenii ei, de foștii săi elevi, și de ultimele evenimente culturale.
+Am vizitat-o pe Doamna Stan, în curtea de pe Strada Spătar Milescu, în fiecare an în care mă întorceam în țară. De fiecare dată, neschimbată, povestind despre prieteni, foști elevi, și despre ultimele evenimente.
 
 Cu toate că era o profesoară formidabilă, care lucra interactiv în clasă, și explica cu o claritate nemaiîntâlnită - algebra lineară cu demonstrații, analiza matematică cu demonstrații, formalismul epsilon-delta care e acum prea complicat pentru licee în Statele Unite, și nu se predă decât la specializare de matematică la mari universități - ei bine, nu cred că am vorbit o singură dată de matematică la ea în curte.
 
