--- a/_posts/2023-10-15-anca-stan.md
+++ b/_posts/2023-10-15-anca-stan.md
@@ -63,23 +63,19 @@ Cu care ocazie, am întâlnit alți prieteni, și o altă lume.
 
 *
 
-Am vizitat-o pe Doamna Stan, în curtea de pe Strada Spătar Milescu, în fiecare an în care mă întorceam în țară. De fiecare dată, neschimbată, povestind despre prieteni, foști elevi, și despre ultimele evenimente.
+Am vizitat-o pe Doamna Stan, în curtea de pe Strada Spătar Milescu, în fiecare an în care mă întorceam în țară. De fiecare dată, neschimbată, povestind despre prieteni și despre ultimele evenimente.
 
-Cu toate că era o profesoară formidabilă, care lucra interactiv în clasă, și explica cu o claritate nemaiîntâlnită - algebra lineară cu demonstrații, analiza matematică cu demonstrații, formalismul epsilon-delta care e acum prea complicat pentru licee în Statele Unite, și nu se predă decât la specializare de matematică la mari universități - ei bine, nu cred că am vorbit o singură dată de matematică la ea în curte.
+Nu am vorbit o singură dată de matematică la ea în curte. O interesau atâtea alte subiecte.
 
-O interesau atâtea alte subiecte.
-
-Într-un an, mi-a făcut cadou un jurnal al unchiului său, Ion Grosu, militar și ofițer de informații care luptase în ambele războaie mondiale. Anca Stan îngrijise manuscrisul, îl culesese și prefațase. Era o carte de înteres istoric, mărturia unui participant la mari evenimente, cât și o poveste personală de familie.
+Într-un an, mi-a făcut cadou un jurnal al unchiului său, Ion Grosu, militar și ofițer de informații care luptase în ambele războaie mondiale. Anca Stan îngrijise manuscrisul, îl culesese și prefațase. Era mărturia unui participant la mari evenimente, cât și o poveste personală de familie.
 
 Lucrase mai mulți ani la publicarea acestei cărți.
 
-Mai apoi, într-o altă vizită, m-a dus să-mi arate muzee din București de care era îndrăgostită. Am fost împreună la Muzeul de Artă Veche Apuseană „Ing. Dumitru Minovici”, un giuvaer pe care altfel nu l-aș fi știut. Apoi, la muzeul Zambaccian. Și la Muzeul Cotroceni, pe care din nou, fără ea, l-aș fi ignorat.
+Într-o altă vizită, m-a dus să-mi arate muzee din București de care era îndrăgostită: Muzeul Medieval Minovici, un giuvaer pe care altfel nu l-aș fi știut. Muzeul Zambaccian. Și Muzeul Cotroceni, pe care, iar, l-aș fi ignorat.
 
-Am căpătat obiceiul să vizitez unul câte unul toate muzeele de artă din București, când mă aflu în vizită. Cred că, în sfârșit, s-ar putea să fi ajuns să le fi vizitat pe aproape toate.
+Alt an, mi-a arătat o nouă carte, la care ținea foarte mult. Era corespondența între Veronica Micle și Mihai Eminescu.
 
-În 2021, mi-a arătat o nouă carte, la care ținea foarte mult. Era corespondența între Veronica Micle și Mihai Eminescu.
-
-Am citit împreună rânduri scrise de cei doi mari îndrăgostiți unul altuiaȘ
+Am citit împreună rânduri scrise de cei doi mari îndrăgostiți unul altuia:
 
 "Mițicule, Mițule, Miluță te sărut și te sărut și te pup și te îmbrățișez și te doresc și iar te doresc și iar te sărut și acum te sărut de mii de ori.
 
@@ -89,15 +85,11 @@ Iar Eminescu scrie:
 
 "Îngerul meu blond, 
 
-Te-aș acoperi toată cu săruturi, cum argintarii îmbracă cu pietre scumpe icoana Maicii Domnului, dacă ai fi de față; aș face-o în gând dacă n-aș fi atât de gelosprecum sunt"
+Te-aș acoperi toată cu săruturi, cum argintarii îmbracă cu pietre scumpe icoana Maicii Domnului, dacă ai fi de față; aș face-o în gând dacă n-aș fi atât de gelos precum sunt."
 
-La ultima mea vizită în 2022, băiatul ei, Radu, care este cu doi ani mai mare ca mine, mi-a sugerat un traseu de vizitat prin Dâmbovița și Argeș, pe la Palatul Potlogi, și la Muzeul Etnografic de la Goleşti-Argeș. A fost o revelație.
+Avea o pasiune pentru viața veche a țării. Mi-a arătat materiale ei manuscrise pentru o istorie a Bucureștilor vechi, și citatul de mai jos, care reflecta în ce mod gândise ea acest proiect:
 
-Doamna Stan avea o pasiune pentru viața veche a țării - povești pierdute după multe rănduri de noi generații. Pornise un proiect prin care să descrie istoria Bucureștiului, al Căii Victoriei, precum și a conacelor și mânăstirilor din Țara Românească.
-
-Mi-a arătat hărțile și materialele ei manuscrise, și un citat, care explica în ce mod Doamna Stan gândise acest proiect:
-
-"...Ceea ce este numai al unui oraș și nu al oricărui altuia, înfățișsarea și viața lui dau sufletului nostru o formă interioară specificăși se constituie în LUME a lui
+"...Ceea ce este numai al unui oraș și nu al oricărui altuia, înfățișarea și viața lui dau sufletului nostru o formă interioară specifică și se constituie în LUME a lui.
 
 Dar pentru ca un oraș să devină lume a ta și tipar pentru relația ta cu largul lumii este nevoie să fi trăit în el îndelung... să-i cunoști fiecare ungher și să știi cât mai bine întregul trecut... Și mai este nevoie să fi fost din când în când plecat de acasă. Să înțelegi ceva din viața și sufletul Atenei și al Romei, al Parisului și al Londrei. Și apoi să vii înapoi și să intri la loc în pătimirile propriei tale lumi care, ca lume, este la fel de mare ca oricare alta. 
 
