--- a/_posts/2023-10-15-anca-stan.md
+++ b/_posts/2023-10-15-anca-stan.md
@@ -87,7 +87,7 @@ Iar Eminescu scrie:
 
 Te-aș acoperi toată cu săruturi, cum argintarii îmbracă cu pietre scumpe icoana Maicii Domnului, dacă ai fi de față; aș face-o în gând dacă n-aș fi atât de gelos precum sunt."
 
-Avea o pasiune pentru viața veche a țării. Mi-a arătat materiale ei manuscrise pentru o istorie a Bucureștilor vechi, și citatul de mai jos, care reflecta în ce mod gândise ea acest proiect:
+Avea o pasiune pentru viața veche a țării. Mi-a arătat materiale ei manuscrise pentru o istorie a Bucureștilor, și citatul de mai jos, care reflecta în ce mod gândise ea acest proiect:
 
 "...Ceea ce este numai al unui oraș și nu al oricărui altuia, înfățișarea și viața lui dau sufletului nostru o formă interioară specifică și se constituie în LUME a lui.
 
