--- a/_posts/2024-03-08-vue.md
+++ b/_posts/2024-03-08-vue.md
@@ -1,3 +1,4 @@
+
 ---
 title: "Vue implementation notes"
 categories: webdev
@@ -89,3 +90,33 @@ npm run serve
 This command launches a local development server and opens your new Vue.js project in the browser, typically available at `http://localhost:8080`.
 
 That's it! You've successfully installed the Vue CLI and created a new `Vue.js` project. You can now begin developing your application.
+
+---
+
+Q: How can Vue work, when it overloads DOM elements in HTML, and it changes DOM elements through Javascript?
+
+---
+
+Vue.js is a progressive JavaScript framework used for building user interfaces and single-page applications. It works by taking control of the DOM (Document Object Model) through a process called "reactivity" and updating it in response to changes in the application's state. Vue's approach to managing the DOM and integrating with HTML is both efficient and straightforward, leveraging a combination of template syntax, reactivity system, and component-based architecture. Here's how Vue achieves this:
+
+#### Template Syntax
+
+Vue uses an HTML-based template syntax that allows developers to declaratively bind the rendered DOM to the underlying Vue instance's data. Vue components are defined with a template that specifies the HTML structure. Within these templates, you can use Vue's directives (such as v-if, v-for, v-model, etc.) to perform data binding and conditional rendering.
+
+#### Reactivity System
+
+At the core of Vue's magic is its reactivity system. When a Vue instance is created, Vue "reactively" watches the instance's data object. It uses a system of getters and setters to track changes to data properties. When a property changes, Vue knows exactly which components depend on that property and efficiently updates just those components, rather than re-rendering the entire DOM. This is achieved through a dependency tracking system, where dependencies are tracked whenever a reactive property is accessed during the component's render, allowing Vue to precisely determine which components need to be re-rendered when data changes.
+
+#### Virtual DOM
+
+Vue utilizes a Virtual DOM (VDOM), which is a lightweight copy of the real DOM in memory. Instead of directly manipulating the DOM every time a change occurs, Vue first applies changes to the Virtual DOM. Then, Vue's "diffing" algorithm analyzes the differences between the previous and current versions of the Virtual DOM to calculate the minimum number of operations required to update the real DOM. This process minimizes direct DOM manipulations, which are costly in terms of performance, and ensures updates are fast and efficient.
+
+#### Components
+
+Vue encourages the use of components, which are reusable Vue instances with their own state, template, and behavior. Components allow for building large applications as a tree of small, manageable, and reusable pieces. Each component manages its own state and re-renders itself independently when its state changes, contributing to the overall efficiency of the application.
+
+#### Direct DOM Manipulation as a Fallback
+
+While Vue primarily manipulates the DOM through its reactivity system and Virtual DOM, it also provides ways to directly manipulate the DOM when necessary, for instance, through refs and lifecycle hooks. This is useful for integrating with non-Vue libraries or for performing optimizations that require direct DOM access.
+
+By combining these mechanisms, Vue provides a powerful and efficient way to build dynamic web applications. The framework takes care of the complexities of DOM updates and changes, allowing developers to focus on the logic and features of their applications.
