--- a/_posts/2024-03-08-vue.md
+++ b/_posts/2024-03-08-vue.md
@@ -120,3 +120,63 @@ Vue encourages the use of components, which are reusable Vue instances with thei
 While Vue primarily manipulates the DOM through its reactivity system and Virtual DOM, it also provides ways to directly manipulate the DOM when necessary, for instance, through refs and lifecycle hooks. This is useful for integrating with non-Vue libraries or for performing optimizations that require direct DOM access.
 
 By combining these mechanisms, Vue provides a powerful and efficient way to build dynamic web applications. The framework takes care of the complexities of DOM updates and changes, allowing developers to focus on the logic and features of their applications.
+
+---
+
+Q:Build me the simplest Vue app that sets the web page title from a Javascript variable
+
+---
+
+Creating the simplest Vue app to set the web page title from a JavaScript variable involves just a few steps. Below is a basic example using Vue 3, which is the latest major version of Vue.js as of my last update. This example will show how to create a Vue app that sets the document title based on a reactive data property.
+
+First, ensure you have Vue 3 included in your project. If you're just experimenting or creating a simple project, you can include Vue directly from a CDN in your HTML file. For more substantial projects, you would typically use a build system or a module bundler like Vue CLI, Vite, or Webpack.
+
+Here's the complete code for a simple HTML file that includes Vue from a CDN and sets the page title:
+
+```html
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Vue Title App</title>
+    <script src="https://unpkg.com/vue@next"></script>
+</head>
+<body>
+    <div id="app">
+        <h1>{{ pageTitle }}</h1>
+    </div>
+
+    <script>
+        const { createApp, ref } = Vue;
+
+        createApp({
+            setup() {
+                const pageTitle = ref('My Vue App');
+
+                // This will reactively change the title as the pageTitle variable changes.
+                watchEffect(() => {
+                    document.title = pageTitle.value;
+                });
+
+                return { pageTitle };
+            }
+        }).mount('#app');
+    </script>
+</body>
+</html>
+```
+
+In this example:
+
+* We include `Vue 3` from a CDN with a `<script>` tag in the `<head>` section.
+* We define a `<div>` with an id of `"app"` which serves as the mount point for our Vue application.
+* Inside the `<script>` tag, we:
+  * Destructure `createApp` and `ref` from the global `Vue` object.
+  * Use `createApp` to create a new Vue application instance.
+  * Define a component with a `setup` function, which is part of Vue's `Composition API`.
+  * Inside setup, we use `ref` to create a reactive reference for our page title, which allows it to be reactive.
+  * We use `watchEffect` to create a side effect that updates the document's title whenever `pageTitle` changes.
+  * Finally, we `mount` our Vue application to the `<div id="app">`.
+
+This simple Vue app demonstrates how to dynamically set the web page title based on a reactive data property. When the `pageTitle` variable changes, the web page title automatically updates to reflect the new value.
