--- a/_posts/2024-05-05-linkedin.md
+++ b/_posts/2024-05-05-linkedin.md
@@ -26,3 +26,45 @@ Would you be willing to do that?
 Thanks so much, {{clientName}}
 
 - {{yourName)}
+
+#### Basic LinkedIn profile checklist
+
+Basic Linkedln profile level 0 checklist:
+
+LinkedIn photo checklist
+* Does it look professional?
+* Am I smiling?
+* Am I dressed professionally?
+* Is the background plain? (use tools like remove.bg if not)
+* Is it the correct size? (400×400)
+
+LinkedIn banner checklist
+* Is the image high quality? (min 1584 x 396)
+* Is the text on it clear?
+* Does it include your company logo or branding?
+* Does it have a clear call to action?
+* Does it have a consistent color scheme?
+* Does it have a strong visual hierarchy?
+
+LinkedIn headline checklist
+* Is it short and sweet?
+* Does it include action words?
+* Does it include a little bit of humor?
+* Does it include specific keywords?
+
+Linkedin summary checklist
+* Does it clearly show your skills?
+* Have I proofread it properly? (or run it through something like grammarly.com)
+* Does it have a clear call to action?
+* Is it neatly formatted?
+
+Advanced LinkedIn profile checklist
+* Have I added media to the Featured section?
+* Have I customized my URL?
+* Does my experience section show what I can do for my clients?
+* Have I added in my skills?
+* Have I added in enough keywords that I want to rank for in my profile?
+* Am I posting content at least once a week?
+
+Advanced LinkedIn profile level 2 checklist:
+* Do my skills have endorsements?
