--- a/_posts/2024-05-05-linkedin.md
+++ b/_posts/2024-05-05-linkedin.md
@@ -7,7 +7,7 @@ layout: post
 
 #### LinkedIn recommendation ask template
 
-Hi {{clientName}},
+Hi clientName,
 
 Hope you are doing well.
 
@@ -23,9 +23,9 @@ All you have to do is simply write your testimonial here - <Linked recommendatio
 
 Would you be willing to do that?
 
-Thanks so much, {{clientName}}
+Thanks so much, clientName
 
-- {{yourName)}
+- yourName
 
 #### Basic LinkedIn profile checklist
 
