--- a/chatgpt/_posts/2023-04-29-webdev.md
+++ b/chatgpt/_posts/2023-04-29-webdev.md
@@ -72,7 +72,7 @@ Sure! Here is a simple skeleton Vue.js application:
   </head>
   <body>
     <div id="app">
-      <h1>{{ message }}</h1>
+      <h1>{% raw %}{{ message }}{% endraw %}</h1>
     </div>
     <script>
       var app = new Vue({
@@ -86,7 +86,7 @@ Sure! Here is a simple skeleton Vue.js application:
 </html>
 ```
 
-This application consists of a single HTML file that includes the `Vue.js` library using a CDN. The Vue.js instance is created using the `new Vue()` constructor function, with an `el` property that specifies the root element of the application, and a `data` property that defines the application's data. In this case, the application data consists of a single message string that is displayed in an <h1> tag in the HTML template using double curly braces `{{ }}`.
+This application consists of a single HTML file that includes the `Vue.js` library using a CDN. The Vue.js instance is created using the `new Vue()` constructor function, with an `el` property that specifies the root element of the application, and a `data` property that defines the application's data. In this case, the application data consists of a single message string that is displayed in an <h1> tag in the HTML template using double curly braces `{% raw %}{{ }}{% endraw %}`.
 
 This is just a basic example to get you started. You can build on this foundation by adding more data properties, creating components, and using directives and event handlers to build out the functionality of your application.
 
@@ -126,7 +126,7 @@ Sure, here's an updated version of the skeleton Vue.js application with some bas
   </head>
   <body>
     <div id="app">
-      <h1>{{ message }}</h1>
+      <h1>{% raw %}{{ message }}{% endraw %}</h1>
     </div>
     <script>
       var app = new Vue({
